# GameFiltersFlatpak

./: .gitignore  LICENSE  README.md
docs/: architecture.md  ipc-protocol.md
flatpak/: com.gamefiltersflatpak.App.yml  com.gamefiltersflatpak.VulkanLayer.yml  io.github.votetheremess.Lumen.yml  org.freedesktop.Platform.VulkanLayer.Lumen.yml
frontend/: Cargo.toml
frontend/data/: com.gamefiltersflatpak.App.desktop  com.gamefiltersflatpak.App.metainfo.xml  io.github.votetheremess.Lumen.desktop  io.github.votetheremess.Lumen.metainfo.xml
frontend/src/: app.rs  games.rs  ipc.rs  main.rs  messages.rs  portal.rs  profiles.rs  tray.rs  window.rs
layer/: meson.build  meson_options.txt
layer/config/: game-filters-flatpak.json.in  lumen.json.in  meson.build
layer/src/: basalt.cpp  command_buffer.hpp  config.cpp  config.hpp  config_serializer.cpp  config_serializer.hpp  descriptor_set.cpp  framebuffer.cpp  input_blocker.cpp  input_blocker.hpp  ipc.cpp  ipc.hpp  keyboard_input.cpp  keyboard_input.hpp  keyboard_input_x11.cpp  keyboard_input_x11.hpp  logger.cpp  logger.hpp  logical_device.hpp  logical_swapchain.cpp  logical_swapchain.hpp  meson.build  mouse_input.cpp  mouse_input.hpp  reshade_parser.cpp  reshade_parser.hpp  settings_manager.cpp  settings_manager.hpp  shader_sources.hpp  vkfuncs.hpp
layer/src/effects/: effect.hpp  effect_config.hpp  effect_registry.cpp  effect_registry.hpp  effect_reshade.cpp  effect_reshade.hpp  effect_simple.cpp  effect_simple.hpp
layer/src/effects/builtin/: builtin_effects.cpp  builtin_effects.hpp  effect_cas.hpp  effect_deband.hpp  effect_dls.hpp  effect_fxaa.hpp  effect_gff.cpp  effect_gff.hpp  effect_lumen_color.cpp  effect_lumen_color.hpp  effect_lumen_local.cpp  effect_lumen_local.hpp  effect_lumen_stylistic.cpp  effect_lumen_stylistic.hpp  effect_lumen_tonal.cpp  effect_lumen_tonal.hpp  effect_lut.cpp  effect_lut.hpp  effect_smaa.hpp
layer/src/effects/params/: effect_param.hpp
layer/src/overlay/: imgui_overlay.cpp  imgui_overlay.hpp  profile_manager.cpp  profile_manager.hpp  theme_gff.cpp  theme_gff.hpp  theme_lumen.cpp  theme_lumen.hpp  view_add_effects.cpp  view_configs.cpp  view_debug.cpp  view_diagnostics.cpp  view_main.cpp  view_settings.cpp  view_shader_manager.cpp  view_shader_test.cpp
layer/src/overlay/params/: field_editor.cpp  field_editor.hpp
layer/src/overlay/params/fields/: field_bool.cpp  field_float.cpp  field_floatvec.cpp  field_int.cpp  field_intvec.cpp  field_uint.cpp  field_uintvec.cpp
layer/src/reshade/: meson.build
layer/src/shader/: gff.frag.glsl  lumen_color.frag.glsl  lumen_local.frag.glsl  lumen_stylistic.frag.glsl  lumen_tonal.frag.glsl  meson.build
scripts/: run.sh
