option('with_so', type: 'boolean', value: true, description: 'Build and install the post-processing layer shared library')
option('with_json', type: 'boolean', value: true, description: 'Generate and install the Vulkan implicit-layer manifest JSON')
option('gff_x11', type: 'boolean', value: true, description: 'Compile the X11 keyboard-grab fallback path (portal is primary; disable for Wayland-only builds)')
